# UGT

./: .gitignore  README.md  Untitled-1.html  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dashboard.py  products.py  technologies.py
backend/app/core/: config.py  database.py
backend/app/ml/: classifier.py
backend/app/models/: entities.py
backend/app/schemas/: schemas.py
backend/app/services/: ugt_service.py
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
